<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StackUnderflow</string>
    <string name="title_activity_stack_underflow">StackUnderflow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username"></string>
    <string name="location"></string>
    <string name="upvote_count"></string>
    <string name="answer_count"> Answers</string>
    <string name="favorite">favorite</string>
    <string name="question_title">Question</string>
    <string name="answer_title">Answer</string>
    <string name="new_answer">New Answer</string>
    <string name="new_reply">New Reply</string>
    <string name="back_to_question">Back to Question</string>

   
    <!--  Main Fragment/Activity -->
    <string name="search">Search</string>
    <string name="ask_question">Ask a Question</string>
    <string name="user_profile">User Profile</string>
    <string name="mark_read">Mark as Read Later</string>
    <string name="newest">Newest</string>
    <string name="popular">Popular</string>

    <!-- Answer/Question List Views -->
    <string name="answer_black_box">Number of Answers</string>
    <string name="answer_text">Answers</string>
    <string name="zero_answers">0</string>
    <string name="default_text">Default</string>

    <!-- New Post -->
    <string name="new_post_fragment_submit_button">Submit</string>
    <string name="new_post_fragment_upload_photo_textview">&#160;Upload Photo?</string>
    <string name="new_post_fragment_location_button_false">&#160;Location?</string>
    <string name="new_post_fragment_location_button_true">&#160;Location:&#160;</string>
    
    <!-- New Question -->
    <string name="new_question_title">New Question</string>
    <string name="new_question_fragment_edittext_title">Place Title Text Here</string>
    <string name="new_question_fragment_edittext_body">Place Question Text Here</string>

    <!-- New Answer -->
    <string name="new_answer_title">New Answer</string>
	<string name="new_answer_fragment_edittext_body">Place Answer Text Here</string>
	
	<!--  Profile Fragment/Activity -->
	<string name="profile_title">User Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="my_favorites">My Favorites</string>
	<string name="read_later">Read Later</string>
	<string name="location_text">Location</string>

    <!-- Username Dialog -->
    <string name="dialogDescText">You need to choose a username! This is the name that users will see when you post a Question, Answer, or Reply.</string>
    <string name="usernameDialog">Username:</string>
    
    <!-- Image Dialog -->
    <string name="camera_choice">Camera</string>
    <string name="gallery_choice">Gallery</string>

    <!-- Searching -->
    <string name="search_question">Questions Only</string>
    <string name="search_answer">Answers Only</string>
    <string name="search_both">Both</string>
    <string name="search_only_pic">Only Posts with Pictures</string>
    <string name="search_text">Text:</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="location_search">Nearby Posts</string>
    
    <!-- Map -->
    <string name="map_title">Map</string>
    <string name="use_my_location">Use My Location</string>
    <string name="use_marker">Use Marker Location</string>

</resources>
