<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding = "10dip" >

    <EditText
        android:id="@+id/new_post_fragment_edittext_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:hint="@string/new_question_fragment_edittext_title"
        android:textColorHint="@color/watermark_grey"
        android:ems="10" >
        <requestFocus />
    </EditText>    

    <EditText
        android:id="@+id/new_post_fragment_edittext_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_post_fragment_edittext_title"
        android:layout_below="@+id/new_post_fragment_edittext_title"
        android:ems="10"
        android:hint="@string/new_question_fragment_edittext_body" 
        android:textColorHint="@color/watermark_grey"/>

   <Button
        android:id="@+id/new_post_fragment_upload_photo_button"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="5dp"
        android:textSize="14sp"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/picture_dark"
        android:background="@android:color/transparent"
        android:layout_alignLeft="@+id/new_post_fragment_edittext_body"
        android:layout_below="@+id/new_post_fragment_edittext_body"
        android:text="@string/new_post_fragment_upload_photo_textview"/>
   
    <Button
        android:id="@+id/new_post_fragment_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/new_post_fragment_edittext_body"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="44dp"
        android:padding="15dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/new_post_fragment_submit_button"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/new_post_fragment_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_post_fragment_upload_photo_button"
        android:layout_below="@+id/new_post_fragment_upload_photo_button"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/mapmarker"
        android:text="@string/new_post_fragment_location_button_false"
        android:textColor="@color/black"
        android:textSize="14sp" />

</RelativeLayout>
