<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120sp" >

    <TextView
        android:id="@+id/postViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_text"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/postViewDetails"
        android:layout_width="wrap_content"
        android:layout_height="24sp"
        android:layout_alignLeft="@+id/postViewTitle"
        android:layout_below="@+id/postViewTitle"
        android:text="@string/default_text"
        android:textColor="@color/black" 
    	android:textSize="16sp" />

    <ImageView
        android:id="@+id/answerViewBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/answer_black_box"
        android:src="@drawable/answer_box_large" />

    <TextView
        android:id="@+id/answersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerViewBox"
        android:layout_alignRight="@+id/answerViewBox"
        android:layout_below="@+id/postViewTitle"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/answer_text"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/numberOfAnswersView"
        android:layout_width="15sp"
        android:layout_height="30sp"
        android:layout_alignBottom="@+id/postViewTitle"
        android:layout_alignLeft="@+id/answersTextView"
        android:layout_alignRight="@+id/answersTextView"
        android:text="@string/zero_answers"
        android:textAlignment="4"
        android:textColor="@color/white"
        android:textSize="28sp" />

</RelativeLayout>
