<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/answerBlackBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/answer_black_box"
        android:src="@drawable/answer_box_large" />

    <TextView
        android:id="@+id/answersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/answerBlackBox"
        android:layout_alignLeft="@+id/answerBlackBox"
        android:layout_alignRight="@+id/answerBlackBox"
        android:layout_marginBottom="17dp"
        android:text="@string/answer_text"
        android:textAlignment="4"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/numberOfAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answersText"
        android:layout_alignLeft="@+id/answerBlackBox"
        android:layout_alignRight="@+id/answerBlackBox"
        android:text="@string/zero_answers"
        android:textAlignment="4"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/postTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/numberOfAnswers"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/answerBlackBox"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/answerBlackBox"
        android:text="@string/default_text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/postQuesDetailsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/answersText"
        android:layout_alignLeft="@+id/postTitleView"
        android:layout_alignRight="@+id/postTitleView"
        android:layout_below="@+id/postTitleView"
        android:text="@string/default_text"
        android:textSize="16sp" />

</RelativeLayout>
