<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/question_fragment_textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/question_fragment_textview_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/question_fragment_button_upvote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/upvote_empty" />

                <TextView
                    android:id="@+id/question_fragment_textview_upvotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upvote_count" /> />

                <ImageButton
                    android:id="@+id/question_fragment_button_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star_empty" />

                <TextView
                    android:id="@+id/question_fragment_textview_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite" /> />

            </LinearLayout>	

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="right"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/question_fragment_button_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/picture_dark" />

                <TextView
                    android:id="@+id/question_fragment_textview_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/question_fragment_listview_replies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/question_fragment_textview_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_count" />

            <ImageButton
                android:id="@+id/question_fragment_button_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/box_arrow_right_large" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>